# ParserLib

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  parser.hpp
example/: CMakeLists.txt  float_parser.cpp
include/: parser.hpp
tests/: CMakeLists.txt
tests/src/: Literal.cpp  Option.cpp  Plus.cpp
